Fix lambda service name in core services deployment workflow

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -18,7 +18,7 @@ jobs:
         service:
           - name: clinic-service
             build-file: .build/*
-          - name: lamdba-authoriser
+          - name: lambda-authoriser
             build-file: src/*
 
     steps:
