--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -18,6 +18,8 @@ jobs:
         service:
           - name: clinic-service
             build-file: .build/*
+            bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
+            sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
           - name: lambda-authoriser
             build-file: src/*
 
@@ -37,7 +39,7 @@ jobs:
             clinic-service:
               - "core-services/clinic-service/**"
             lambda-authoriser:
-              - "core-services/clinic-service/**"
+              - "core-services/lambda-authoriser/**"
 
       - name: Install dependencies
         if: ${{ matrix.service.name != 'lambda-authoriser' }}
@@ -51,30 +53,27 @@ jobs:
       - name: Create zip
         run: zip -r ${{ matrix.service.name }}.zip ${{ matrix.service.build-file }}
         working-directory: core-services/${{ matrix.service.name }}
-      # - name: Create lambda authoriser zip
-      #   run: zip -r lambda-authoriser.zip src/*
-      #   working-directory: core-services/lambda-authoriser
 
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     aws-region: "eu-west-2"
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
-      #     role-session-name: PETS-Clinic-Service-Deploy
-      # - name: Get secrets from AWS
-      #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
-      #   with:
-      #     secret-ids: |
-      #       ClinicServiceDeploy
-      #       Clinic_Service_URIs
-      #       LambdaAuthoriserDeploy
-      #     parse-json-secrets: true
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "eu-west-2"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
+          role-session-name: PETS-Clinic-Service-Deploy
+      - name: Get secrets from AWS
+        uses: aws-actions/aws-secretsmanager-get-secrets@v2
+        with:
+          secret-ids: |
+            CoreServicesDeploy
+            Clinic_Service_URIs
+          parse-json-secrets: true
 
-      # - name: Upload Clinic Service to S3
-      #   working-directory: core-services/clinic-service
-      #   run: aws s3 cp clinic-service-lambda.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Upload Service to S3
+        if: ${{ matrix.service.name != 'lambda-authoriser' }}
+        working-directory: core-services/${{ matrix.service.name }}
+        run: aws s3 cp ${{ matrix.service.name }}-lambda.zip s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id ${{ matrix.service.sse-key-secret }}
       # - name: Upload Lambda Authoriser to S3
       #   working-directory: core-services/lambda-authoriser
       #   run: aws s3 cp lambda-authoriser.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
