--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -24,6 +24,8 @@ jobs:
           - name: lambda-authoriser
             zip-file: lambda-authoriser.zip
             build-file: src/*
+            bucket-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_BUCKET_NAME
+            sse-key-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_SSE_KEY
 
     steps:
       - name: Checkout code
@@ -69,24 +71,24 @@ jobs:
         with:
           secret-ids: |
             CoreServicesDeploy
-            Clinic_Service_URIs
+            CoreServicesURIs
           parse-json-secrets: true
 
       - name: Upload Service to S3
         working-directory: core-services/${{ matrix.service.name }}
         run: aws s3 cp ${{ matrix.service.zip-file }} s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id ${{ matrix.service.sse-key-secret }}
-      # - name: Upload Lambda Authoriser to S3
-      #   working-directory: core-services/lambda-authoriser
-      #   run: aws s3 cp lambda-authoriser.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
 
-      # - name: Process Swagger file
-      #   uses: actions/github-script@v7
-      #   with:
-      #     script: |
-      #       const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
-      #       addIntegrationsToSwagger()
-      # - name: Upload Swagger file to S3
-      #   run: aws s3 cp swagger.json s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Process Swagger file
+        if: ${{ matrix.service.name != 'lambda-authoriser' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
+            addIntegrationsToSwagger(${{ matrix.service.name }})
+      - name: Upload Swagger file to S3
+        if: ${{ matrix.service.name != 'lambda-authoriser' }}
+        working-directory: core-services/${{ matrix.service.name }}
+        run: aws s3 cp swagger.json s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
 
       # - name: Create package.json file including only non-dev dependencies
       #   uses: actions/github-script@v7
