--- a/core-services/clinic-service/sonar-project.properties
+++ b/core-services/clinic-service/sonar-project.properties
@@ -1,3 +1,8 @@
 sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app_clinic
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
+sonar.sources=src
+sonar.exclusions=.build/**, .dynamodb/*, coverage/*
+sonar.tests=test
+sonar.test.inclusions=**/*.unitTest.ts
+sonar.ts.tslint.configPath=tslint.json
