--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -78,17 +78,17 @@ jobs:
         working-directory: core-services/${{ matrix.service.name }}
         run: aws s3 cp ${{ matrix.service.zip-file }} s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id ${{ matrix.service.sse-key-secret }}
 
-      # - name: Process Swagger file
-      #   if: ${{ matrix.service.name != 'lambda-authoriser' }}
-      #   uses: actions/github-script@v7
-      #   with:
-      #     script: |
-      #       const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
-      #       addIntegrationsToSwagger(${{ matrix.service.name }})
-      # - name: Upload Swagger file to S3
-      #   if: ${{ matrix.service.name != 'lambda-authoriser' }}
-      #   working-directory: core-services/${{ matrix.service.name }}
-      #   run: aws s3 cp swagger.json s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id ${{ matrix.service.sse-key-secret }}
+      - name: Process Swagger file
+        if: ${{ matrix.service.name != 'lambda-authoriser' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
+            addIntegrationsToSwagger('${{ matrix.service.name }}')
+      - name: Upload Swagger file to S3
+        if: ${{ matrix.service.name != 'lambda-authoriser' }}
+        working-directory: core-services/${{ matrix.service.name }}
+        run: aws s3 cp swagger.json s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id ${{ matrix.service.sse-key-secret }}
 
       - name: Create package.json file including only non-dev dependencies
         uses: actions/github-script@v7
@@ -96,24 +96,15 @@ jobs:
           script: |
             const createPackageDotJson = require('./.github/scripts/create-package-dot-json.js')
             createPackageDotJson('${{ matrix.service.name }}')
-      # - name: Clinic Service - Run yarn in nodejs folder
-      #   working-directory: node-zip/clinic-service/nodejs
-      #   run: yarn
-      # - name: Clinic Service - Create nodejs zip file
-      #   working-directory: node-zip/clinic-service
-      #   run: zip -r nodejs.zip nodejs
-      # - name: Clinic Service - Upload nodejs zip file to S3
-      #   working-directory: node-zip/clinic-service
-      #   run: aws s3 cp nodejs.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
-      # - name: Lambda Authoriser - Run yarn in nodejs folder
-      #   working-directory: node-zip/lambda-authoriser/nodejs
-      #   run: yarn
-      # - name: Lambda Authoriser - Create nodejs zip file
-      #   working-directory: node-zip/lambda-authoriser
-      #   run: zip -r nodejs.zip nodejs
-      # - name: Lambda Authoriser - Upload nodejs zip file to S3
-      #   working-directory: node-zip/lambda-authoriser
-      #   run: aws s3 cp nodejs.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
+      - name: Run yarn in nodejs folder
+        working-directory: node-zip/${{ matrix.service.name }}/nodejs
+        run: yarn
+      - name: Create nodejs zip file
+        working-directory: node-zip/${{ matrix.service.name }}
+        run: zip -r nodejs.zip nodejs
+      - name: Upload nodejs zip file to S3
+        working-directory: node-zip/${{ matrix.service.name }}
+        run: aws s3 cp nodejs.zip s3://${{ matrix.service.bucket-secret }} --sse aws:kms --sse-kms-key-id ${{ matrix.service.sse-key-secret }}
 
-      # - name: Update clinic service lambda code
-      #   run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:clinic-service-lambda --s3-bucket $CLINICSERVICEDEPLOY_BUCKET_NAME --s3-key clinic-service-lambda.zip
+      - name: Update lambda code
+        run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:${{ matrix.service.name }}-lambda --s3-bucket ${{ matrix.service.bucket-secret }} --s3-key clinic-service-lambda.zip
