--- a/core-services/clinic-service/sonar-project.properties
+++ b/core-services/clinic-service/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src
 sonar.exclusions=.build/**, .dynamodb/*, coverage/*
 sonar.tests=test
 sonar.test.inclusions=**/*.unitTest.ts
-sonar.ts.tslint.configPath=tslint.json
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
