--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "serverless offline start --verbose",
     "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
-    "test": "jest",
+    "test": "jest --coverage",
     "test-m": "BRANCH=local jest",
     "tools-setup": "sls dynamodb install",
     "build": "tspc -b tsconfig.json && yarn run build:copy",
