Add applicant service to deployment strategy matrix

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -22,6 +22,12 @@ jobs:
             bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
             sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
             lambda: clinic-service-lambda
+          - name: applicant-service
+            zip-file: applicant-service-lambda.zip
+            build-folder: .build/*
+            bucket-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_BUCKET_NAME
+            sse-key-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_SSE_KEY
+            lambda: applicant-service-lambda
           - name: lambda-authoriser
             zip-file: lambda-authoriser.zip
             build-folder: src/*
