--- a/.github/workflows/core-services-deploy-test.yaml
+++ b/.github/workflows/core-services-deploy-test.yaml
@@ -2,6 +2,13 @@ name: Pets Core Services Deployment - Test
 
 on:
   workflow_dispatch:
+  pull_request:
+    types: [closed]
+    branches: [release/*]
+    paths:
+      - "core-services/clinic-service/**"
+      - "core-services/applicant-service/**"
+      - "core-services/lambda-authoriser/**"
 
 jobs:
   clinic-service:
