--- a/.github/workflows/app-deploy-test.yaml
+++ b/.github/workflows/app-deploy-test.yaml
@@ -2,6 +2,11 @@ name: Pets UI Deployment - Test
 
 on:
   workflow_dispatch:
+  pull_request:
+    types: [closed]
+    branches: [release/*]
+    paths:
+      - "app/**"
 
 jobs:
   pets-ui:
