--- a/core-services/clinic-service/sonar-project.properties
+++ b/core-services/clinic-service/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app_clinic
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src
-sonar.exclusions=.build/**, .dynamodb/*, coverage/*
+sonar.exclusions=.build/**, .dynamodb/*, coverage/*, swagger/*
 sonar.tests=test
 sonar.test.inclusions=**/*.unitTest.ts
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
