Feature/TBBETA-504 Sonnarcloud CI (#31)
* run sonnarcloud scan from ci pipeline

* fix gh workflow indentation issue

* add sonar project property to clinic service

* updated sonnar cloud host url

* updated sonnar cloud project key

* updated sonnar cloud project key

* update sonar configs for clinic service project and root project

* run sonar scanner with coverage

* run sonar scanner with coverage fix

* add swagger to excluded sonar files and update jpb name

--- a/.github/workflows/clinic-service-ci.yaml
+++ b/.github/workflows/clinic-service-ci.yaml
@@ -6,12 +6,15 @@ on:
 
 jobs:
   test-and-linting:
-    name: Run unit tests, linting & security checks
+    name: Run unit tests, audit, and SonarCloud Scan
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -24,7 +27,9 @@ jobs:
       - name: Run unit tests
         run: yarn run test
         working-directory: core-services/clinic-service
-      # - name: Run eslint
-      #   run: yarn run lint
-      #   working-directory: core-services/clinic-service
-      #   continue-on-error: true
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: core-services/clinic-service/
