Add applicant-service to paths-filter action, order strategy matrix alphabetically

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -16,18 +16,18 @@ jobs:
     strategy:
       matrix:
         service:
-          - name: clinic-service
-            zip-file: clinic-service-lambda.zip
-            build-folder: .build/*
-            bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
-            sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
-            lambda: clinic-service-lambda
           - name: applicant-service
             zip-file: applicant-service-lambda.zip
             build-folder: .build/*
             bucket-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_BUCKET_NAME
             sse-key-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_SSE_KEY
             lambda: applicant-service-lambda
+          - name: clinic-service
+            zip-file: clinic-service-lambda.zip
+            build-folder: .build/*
+            bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
+            sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
+            lambda: clinic-service-lambda
           - name: lambda-authoriser
             zip-file: lambda-authoriser.zip
             build-folder: src/*
@@ -48,6 +48,8 @@ jobs:
         id: changes
         with:
           filters: |
+            applicant-service:
+              - "core-services/applicant-service/**"
             clinic-service:
               - "core-services/clinic-service/**"
             lambda-authoriser:
