Fix deploy job names in caller workflows, order paths alphabetically

--- a/.github/workflows/core-services-deploy-dev.yaml
+++ b/.github/workflows/core-services-deploy-dev.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  clinic-service:
+  deploy:
     uses: ./.github/workflows/core-services-deploy.yaml
     with:
       environment: "dev"
