--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -24,12 +24,17 @@ jobs:
       - name: Install dependencies
         run: yarn workspace clinic-service install
         working-directory: core-services/clinic-service
+
       - name: Build clinic service
         working-directory: core-services/clinic-service
         run: yarn run build
       - name: Create lambda zip
         run: zip -r clinic-service-lambda.zip .build/*
         working-directory: core-services/clinic-service
+      - name: Create lambda authoriser zip
+        run: zip -r lambda-authoriser.zip src/*
+        working-directory: core-services/lambda-authoriser
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -44,30 +49,50 @@ jobs:
           secret-ids: |
             ClinicServiceDeploy
             Clinic_Service_URIs
+            LambdaAuthoriserDeploy
           parse-json-secrets: true
+
       - name: Upload Clinic Service to S3
         working-directory: core-services/clinic-service
         run: aws s3 cp clinic-service-lambda.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Upload Lambda Authoriser to S3
+        working-directory: core-services/lambda-authoriser
+        run: aws s3 cp lambda-authoriser.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
+
       - name: Process Swagger file
         uses: actions/github-script@v7
         with:
           script: |
-            const script = require('./.github/scripts/swagger-integrations.js')
-            script()
+            const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
+            addIntegrationsToSwagger()
       - name: Upload Swagger file to S3
         run: aws s3 cp swagger.json s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+
       - name: Create package.json file including only non-dev dependencies
         uses: actions/github-script@v7
         with:
           script: |
-            const script = require('./.github/scripts/zip-node-modules.js')
-            script()
-      - name: Run yarn in nodejs folder
-        working-directory: nodejs
+            const createPackageDotJson = require('./.github/scripts/create-package-dot-json.js')
+            createPackageDotJson('clinic-service')
+            createPackageDotJson('lambda-authoriser')
+      - name: Clinic Service - Run yarn in nodejs folder
+        working-directory: node-zip/clinic-service/nodejs
         run: yarn
-      - name: Create nodejs zip file
+      - name: Clinic Service - Create nodejs zip file
+        working-directory: node-zip/clinic-service
         run: zip -r nodejs.zip nodejs
-      - name: Upload nodejs zip file to S3
+      - name: Clinic Service - Upload nodejs zip file to S3
+        working-directory: node-zip/clinic-service
         run: aws s3 cp nodejs.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Lambda Authoriser - Run yarn in nodejs folder
+        working-directory: node-zip/lambda-authoriser/nodejs
+        run: yarn
+      - name: Lambda Authoriser - Create nodejs zip file
+        working-directory: node-zip/lambda-authoriser
+        run: zip -r nodejs.zip nodejs
+      - name: Lambda Authoriser - Upload nodejs zip file to S3
+        working-directory: node-zip/lambda-authoriser
+        run: aws s3 cp nodejs.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
+
       - name: Update clinic service lambda code
         run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:clinic-service-lambda --s3-bucket $CLINICSERVICEDEPLOY_BUCKET_NAME --s3-key clinic-service-lambda.zip
