--- a/.github/workflows/core-services-ci.yaml
+++ b/.github/workflows/core-services-ci.yaml
@@ -1,15 +1,25 @@
 name: Pets Core Services CI
 on:
   push:
-    paths: "core-services/clinic-service/**"
+    paths:
+      - "core-services/applicant-service/**"
+      - "core-services/clinic-service/**"
+      - "core-services/lambda-authoriser/**"
   pull_request:
-    paths: "core-services/clinic-service/**"
+    paths:
+      - "core-services/applicant-service/**"
+      - "core-services/clinic-service/**"
+      - "core-services/lambda-authoriser/**"
   workflow_dispatch:
 
 jobs:
   test-and-linting:
     name: Run unit tests, linting & security checks
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        service: [applicant-service, clinic-service, lambda-authoriser]
 
     steps:
       - name: Checkout code
@@ -19,16 +29,27 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
+      - name: Paths filter
+        uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            applicant-service:
+              - "core-services/applicant-service/**"
+            clinic-service:
+              - "core-services/clinic-service/**"
+            lambda-authoriser:
+              - "core-services/lambda-authoriser/**"
       - name: Install dependencies
         run: yarn
       - name: Audit packages
         run: yarn audit
       - name: Run unit tests
         run: yarn run test
-        working-directory: core-services/clinic-service
+        working-directory: core-services/${{ matrix.service }}
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: core-services/clinic-service/
+          projectBaseDir: core-services/${{ matrix.service }}/
