Add pr trigger & sonarcloud scan to app-ci

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -3,6 +3,8 @@ name: Pets UI CI
 on:
   push:
     paths: "app/**"
+  pull_request:
+    paths: "app/**"
   workflow_dispatch:
 
 jobs:
@@ -29,3 +31,9 @@ jobs:
         run: yarn run lint
         working-directory: app/pets-ui
         continue-on-error: true
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: app/pets-ui/
