--- a/.github/workflows/core-services-ci.yaml
+++ b/.github/workflows/core-services-ci.yaml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   test-and-linting:
-    name: Run unit tests, linting & security checks
+    name: Run unit tests, audit, and SonarCloud Scan
     runs-on: ubuntu-latest
 
     strategy:
@@ -24,6 +24,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
