--- a/core-services/lambda-authoriser/package.json
+++ b/core-services/lambda-authoriser/package.json
@@ -24,6 +24,7 @@
     "nock": "^13.5.5",
     "serverless-offline": "^14.3.2",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
 }
