Remove applicant-service from ci & deploy workflows

--- a/.github/workflows/core-services-ci.yaml
+++ b/.github/workflows/core-services-ci.yaml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [applicant-service, clinic-service, lambda-authoriser]
+        service: [clinic-service, lambda-authoriser]
 
     steps:
       - name: Checkout code
