Fix role & endpoint in config-test-tech-record

--- a/core-services/lambda-authoriser/tests/resources/config-test-tech-record.yml
+++ b/core-services/lambda-authoriser/tests/resources/config-test-tech-record.yml
@@ -1,4 +1,4 @@
 roleToResources:
-  - roleName: "TechRecord.View"
+  - roleName: "Clinics.ReadAll"
     associatedResources:
-      - "/vehicles/*"
+      - "/clinics/*"
