TBBETA-490: Refactor CD pipelines to deploy only services containing changes (#33)
* adding ts-jest

* Add yarn audit to app-ci & app-cd

* Add upload artifact step to add-cd.yaml

* Correct upload artifact step

* Change build working directory step, rename deploy job

* Update babelrc to resolve build error:
- error when build triggered: https://nextjs.org/docs/messages/babel-font-loader-conflict
- solution: https://nextjs.org/docs/pages/building-your-application/configuring/babel

* Update babelrc to resolve build error:
- error & solution: https://nextjs.org/docs/messages/swc-disabled

* Fix build path in app-cd.yaml

* Create deploy job in app-cd.yaml, rename previous deploy job to build

* Add S3 sync step to app-cd.yaml deploy job

* Add download artifact step to app-cd.yaml deploy job

* Add AWS role to app-cd.yaml, add .env to gitignore

* Update app-cd.yaml to use GitHub secrets

* Update app-cd.yaml to use debug mode in S3 sync step

* Revert "Update app-cd.yaml to use debug mode in S3 sync step"

This reverts commit 9f0bc04ade4d531294632a590ebfc50ea1e16831.

* Add sse flag to s3 sync step in app-cd.yaml

* Revert "Add sse flag to s3 sync step in app-cd.yaml"

This reverts commit 3a511e7706e9c426f686de2b1d868b13b0e92e1a.

* Add sse flag with kms to s3 sync step in app-cd.yaml

* Add kms key id to s3 sync step in app-cd.yaml

* Delete images in app/pets-ui/public/

* Delete old S3 Sync action from add-cd.yaml

* Update assumed role secret name in app-cd.yaml

* Create CD pipeline for clinic-service

* Add push trigger to CD pipeline for testing

* Comment out unit test step from CD pipeline:
(unit tests have not been merged yet)

* building core logic and unit tested dao

* Comment out linting step from CD pipeline:
(linter has not been added yet)

* Update handler file location in deploy job

* Revert "Add push trigger to CD pipeline for testing"

This reverts commit 2e675e22d906d3f15273a7

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -1,7 +1,7 @@
 name: Pets UI CI
 
 on:
-  push:
+  pull_request:
     paths: "app/**"
   workflow_dispatch:
 
@@ -29,3 +29,9 @@ jobs:
         run: yarn run lint
         working-directory: app/pets-ui
         continue-on-error: true
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: app/pets-ui/
