--- a/.github/workflows/app-deploy-preprod.yaml
+++ b/.github/workflows/app-deploy-preprod.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     types: [closed]
-    branches: [release/*]
+    branches: [main]
     paths:
       - "app/**"
 
@@ -12,5 +12,5 @@ jobs:
   pets-ui:
     uses: ./.github/workflows/app-deploy.yaml
     with:
-      environment: "test"
+      environment: "preprod"
     secrets: inherit
