--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -11,6 +11,8 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
-    "typescript": "^5.5.4"
+    "ts-patch": "^3.2.1",
+    "typescript": "5.5.4",
+    "typescript-transform-paths": "3.4.7"
   }
 }
