--- a/core-services/applicant-service/tsconfig.json
+++ b/core-services/applicant-service/tsconfig.json
@@ -13,6 +13,12 @@
       "@utils/*": ["utils/*"]
     },
     "esModuleInterop": true,
-    "outDir": ".build"
+    "outDir": ".build",
+    "rootDir": "./",
+    "plugins": [
+      { 
+        "transform": "typescript-transform-paths" 
+      }
+    ]
   }
 }
