Fix path aliases by adding moduleResolution to tsconfig

--- a/core-services/applicant-service/tsconfig.json
+++ b/core-services/applicant-service/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es2020",
     "strict": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "paths": {
       "@/*": ["./*"],
       "@config/*": ["config/*"],
