--- a/app/pets-ui/sonar-project.properties
+++ b/app/pets-ui/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=ukhsa-internal_pre-entry-tb-screening-app-ui
 sonar.organization=ukhsa-internal
 sonar.host.url=https://sonarcloud.io
-sonar.sources=src
-sonar.exclusions=.build/**, .dynamodb/*, coverage/*, .next/*, 
-# sonar.tests=test
-# sonar.test.inclusions=**/*.unitTest.ts
+sonar.sources=app/, components/
+sonar.exclusions=components/**/*.test.tsx
+sonar.tests=components/, cypress
+sonar.test.inclusions=components/**/*.test.tsx, cypress/e2e/**
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
