--- a/.github/workflows/app-deploy-preprod.yaml
+++ b/.github/workflows/app-deploy-preprod.yaml
@@ -2,11 +2,11 @@ name: Pets UI Deployment - Test
 
 on:
   workflow_dispatch:
-  pull_request:
-    types: [closed]
-    branches: [main]
-    paths:
-      - "app/**"
+  # pull_request:
+  #   types: [closed]
+  #   branches: [main]
+  #   paths:
+  #     - "app/**"
 
 jobs:
   pets-ui:
