--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -7,6 +7,13 @@
     "build": "tsc",
     "deploy": "serverless deploy"
   },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.675.0",
+    "@aws-sdk/lib-dynamodb": "^3.675.0",
+    "aws-lambda": "^1.0.7",
+    "aws-xray-sdk": "^3.10.1",
+    "node-yaml": "^4.0.1"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
