--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -4,8 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "deploy": "serverless deploy"
+    "start": "serverless offline start --verbose",
+    "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
+    "test": "jest",
+    "test-m": "BRANCH=local jest",
+    "tools-setup": "sls dynamodb install",
+    "build": "tspc -b tsconfig.json && yarn run build:copy",
+    "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find test -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build",
+    "zip": "zip -r test-service.zip .build"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.675.0",
