--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "applicant-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "applicants.js",
   "license": "MIT",
   "scripts": {
     "start": "serverless offline start --verbose",
