--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -23,6 +23,12 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "serverless-auto-swagger": "^3.0.0",
+    "serverless-dynamodb": "^0.2.54",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^14.3.3",
+    "serverless-offline-aws-eventbridge": "^2.2.2",
+    "serverless-plugin-tracing": "^2.0.0",
     "ts-jest": "^29.2.4",
     "ts-patch": "^3.2.1",
     "typescript": "5.5.4",
