Fix attribuite names in serverless.yml to match db schema

--- a/core-services/applicant-service/serverless.yml
+++ b/core-services/applicant-service/serverless.yml
@@ -70,10 +70,10 @@ resources:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: full_name
+          - AttributeName: fullName
             AttributeType: S
         KeySchema:
-          - AttributeName: full_name
+          - AttributeName: fullName
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${param:tableName}
