--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -18,7 +18,8 @@
     "@aws-sdk/lib-dynamodb": "^3.675.0",
     "aws-lambda": "^1.0.7",
     "aws-xray-sdk": "^3.10.1",
-    "node-yaml": "^4.0.1"
+    "node-yaml": "^4.0.1",
+    "path-parser": "^6.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
