--- a/core-services/applicant-service/package.json
+++ b/core-services/applicant-service/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^29.7.0",
     "serverless-auto-swagger": "^3.0.0",
     "serverless-dynamodb": "^0.2.54",
