--- a/core-services/applicant-service/tsconfig.json
+++ b/core-services/applicant-service/tsconfig.json
@@ -14,6 +14,7 @@
       "@utils/*": ["utils/*"]
     },
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "outDir": ".build",
     "rootDir": "./",
     "plugins": [
