--- a/.github/workflows/core-services-ci.yaml
+++ b/.github/workflows/core-services-ci.yaml
@@ -16,11 +16,11 @@ jobs:
     outputs:
       packages: ${{ steps.filter.outputs.changes }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          # Disabling shallow clone is recommended for improving relevancy of reporting
-          fetch-depth: 0
+      # - name: Checkout code
+      #   uses: actions/checkout@v4
+      #   with:
+      #     # Disabling shallow clone is recommended for improving relevancy of reporting
+      #     fetch-depth: 0
       - uses: dorny/paths-filter@v3
         id: filter
         with:
