--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -8,32 +8,66 @@ on:
         required: true
 
 jobs:
+  matrix:
+    name: Create strategy matrix
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.create-matrix.outputs.matrix }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+      - name: Paths filter
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            applicant-service:
+              - "core-services/applicant-service/**"
+            clinic-service:
+              - "core-services/clinic-service/**"
+            lambda-authoriser:
+              - "core-services/lambda-authoriser/**"
+      - name: Create matrix
+        uses: actions/github-script@v7
+        id: create-matrix
+        with:
+          script: |
+            const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
+            const matrix = createDeploymentMatrix(${{ steps.filter.outputs }})
+            echo "${{ matrix }}"
+            return matrix
+
   deploy:
     name: Build, package & deploy services
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    needs: matrix
 
     strategy:
       matrix:
         service:
-          - name: applicant-service
-            zip-file: applicant-service-lambda.zip
-            build-folder: .build/*
-            bucket-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_BUCKET_NAME
-            sse-key-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_SSE_KEY
-            lambda: applicant-service-lambda
-          - name: clinic-service
-            zip-file: clinic-service-lambda.zip
-            build-folder: .build/*
-            bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
-            sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
-            lambda: clinic-service-lambda
-          - name: lambda-authoriser
-            zip-file: lambda-authoriser.zip
-            build-folder: src/*
-            bucket-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_BUCKET_NAME
-            sse-key-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_SSE_KEY
-            lambda: api-gateway-authoriser
+          ${{ fromJSON(needs.matrix.outputs.matrix) }}
+          # - name: applicant-service
+          #   zip-file: applicant-service-lambda.zip
+          #   build-folder: .build/*
+          #   bucket-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_BUCKET_NAME
+          #   sse-key-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_SSE_KEY
+          #   lambda: applicant-service-lambda
+          # - name: clinic-service
+          #   zip-file: clinic-service-lambda.zip
+          #   build-folder: .build/*
+          #   bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
+          #   sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
+          #   lambda: clinic-service-lambda
+          # - name: lambda-authoriser
+          #   zip-file: lambda-authoriser.zip
+          #   build-folder: src/*
+          #   bucket-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_BUCKET_NAME
+          #   sse-key-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_SSE_KEY
+          #   lambda: api-gateway-authoriser
 
     steps:
       - name: Checkout code
@@ -43,17 +77,17 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
-      - name: Paths filter
-        uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            applicant-service:
-              - "core-services/applicant-service/**"
-            clinic-service:
-              - "core-services/clinic-service/**"
-            lambda-authoriser:
-              - "core-services/lambda-authoriser/**"
+      # - name: Paths filter
+      #   uses: dorny/paths-filter@v3
+      #   id: changes
+      #   with:
+      #     filters: |
+      #       applicant-service:
+      #         - "core-services/applicant-service/**"
+      #       clinic-service:
+      #         - "core-services/clinic-service/**"
+      #       lambda-authoriser:
+      #         - "core-services/lambda-authoriser/**"
 
       - name: Install dependencies
         if: ${{ matrix.service.name != 'lambda-authoriser' }}
