--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -30,15 +30,14 @@ jobs:
               - "core-services/clinic-service/**"
             lambda-authoriser:
               - "core-services/lambda-authoriser/**"
+      - run: echo ${{ steps.filter.outputs }}
       - name: Create matrix
         uses: actions/github-script@v7
         id: create-matrix
         with:
           script: |
             const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
-            const matrix = createDeploymentMatrix(${{ steps.filter.outputs }})
-            echo "${{ matrix }}"
-            return matrix
+            return matrix = createDeploymentMatrix(${{ steps.filter.outputs }})
 
   deploy:
     name: Build, package & deploy services
