--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -56,6 +56,7 @@ jobs:
             return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
 
   print-matrix:
+    runs-on: ubuntu-latest
     needs: matrix
     steps:
       - run: echo ${{ needs.matrix.outputs.matrix }}
