--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -54,13 +54,14 @@ jobs:
           script: |
             const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
             return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
+      - run: "${{steps.create-matrix.outputs.result}}"
 
   print-matrix:
     runs-on: ubuntu-latest
     needs: matrix
     steps:
-      - run: echo ${{ needs.matrix.outputs.result }}
-      - run: echo ${{ fromJSON(needs.matrix.outputs.result) }}
+      - run: echo "${{ needs.matrix.outputs.result }}"
+      - run: echo "${{ needs.matrix.outputs.matrix }}"
 
   deploy:
     name: Build, package & deploy services
