--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     outputs:
-      matrix: ${{ steps.create-matrix.outputs.matrix }}
+      matrix: ${{ steps.set-output.outputs.matrix }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,7 +54,9 @@ jobs:
           script: |
             const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
             return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
-      - run: echo "${{steps.create-matrix.outputs.result}}"
+      - name: Set job output
+        id: set-output
+        run: echo "matrix=${{steps.create-matrix.outputs.result}}" >> "$GITHUB_OUTPUT"
 
   print-matrix:
     runs-on: ubuntu-latest
