--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -58,12 +58,12 @@ jobs:
         id: set-output
         run: echo "matrix=${{steps.create-matrix.outputs.result}}" >> "$GITHUB_OUTPUT"
 
-  print-matrix:
-    runs-on: ubuntu-latest
-    needs: matrix
-    steps:
-      - run: echo "${{ needs.matrix.outputs.matrix }}"
-      - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
+  # print-matrix:
+  #   runs-on: ubuntu-latest
+  #   needs: matrix
+  #   steps:
+  #     - run: echo "${{ needs.matrix.outputs.matrix }}"
+  #     - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
 
   deploy:
     name: Build, package & deploy services
