Convert script output to string using json stringify

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -54,6 +54,7 @@ jobs:
           script: |
             const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
             return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
+      - run: echo ${{ steps.create-matrix.outputs.result }}
       - name: Set job output
         id: set-output
         run: echo "matrix=${{ steps.create-matrix.outputs.result }}" >> "$GITHUB_OUTPUT"
