--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -54,17 +54,16 @@ jobs:
           script: |
             const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
             return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
-      - run: echo ${{ steps.create-matrix.outputs.result }}
       - name: Set job output
         id: set-output
         run: echo "matrix=${{ steps.create-matrix.outputs.result }}" >> "$GITHUB_OUTPUT"
 
-  print-matrix:
-    runs-on: ubuntu-latest
-    needs: matrix
-    steps:
-      - run: echo "${{ needs.matrix.outputs.matrix }}"
-      - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
+  # print-matrix:
+  #   runs-on: ubuntu-latest
+  #   needs: matrix
+  #   steps:
+  #     - run: echo "${{ needs.matrix.outputs.matrix }}"
+  #     - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
 
   deploy:
     name: Build, package & deploy services
