--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -8,12 +8,12 @@ on:
         required: true
 
 jobs:
-  matrix:
+  changes:
     name: Create strategy matrix
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     outputs:
-      matrix: ${{ steps.set-output.outputs.matrix }}
+      service: ${{ steps.filter.outputs.changes }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,24 +31,24 @@ jobs:
               - "core-services/clinic-service/**"
             lambda-authoriser:
               - "core-services/lambda-authoriser/**"
-      - name: Create matrix
-        uses: actions/github-script@v7
-        id: create-matrix
-        with:
-          script: |
-            const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
-            return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
-      - name: Set job output
-        id: set-output
-        run: echo "matrix=${{ steps.filter.outputs.changes }}" >> "$GITHUB_OUTPUT"
-        #run: echo "matrix=${{ steps.create-matrix.outputs.result }}" >> "$GITHUB_OUTPUT"
+      # - name: Create matrix
+      #   uses: actions/github-script@v7
+      #   id: create-matrix
+      #   with:
+      #     script: |
+      #       const createDeploymentMatrix = require('./.github/scripts/create-deployment-matrix.js')
+      #       return matrix = createDeploymentMatrix(${{ steps.filter.outputs.changes }})
+      # - name: Set job output
+      #   id: set-output
+      #   run: echo "matrix=${{ steps.filter.outputs.changes }}" >> "$GITHUB_OUTPUT"
+      #   run: echo "matrix=${{ steps.create-matrix.outputs.result }}" >> "$GITHUB_OUTPUT"
 
   print-matrix:
     runs-on: ubuntu-latest
     needs: matrix
     steps:
-      - run: echo "${{ needs.matrix.outputs.matrix }}"
-      - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
+      - run: echo ${{ needs.changes.outputs.service }}
+      - run: echo ${{ fromJSON(needs.changes.outputs.service) }}
 
   deploy:
     name: Build, package & deploy services
@@ -58,7 +58,7 @@ jobs:
 
     strategy:
       matrix:
-        service: ${{ needs.matrix.outputs.matrix }}
+        service: ${{ fromJSON(needs.changes.outputs.service) }}
 
     steps:
       - name: Checkout code
