--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -45,7 +45,7 @@ jobs:
 
   print-matrix:
     runs-on: ubuntu-latest
-    needs: matrix
+    needs: changes
     steps:
       - run: echo ${{ needs.changes.outputs.service }}
       - run: echo ${{ fromJSON(needs.changes.outputs.service) }}
@@ -54,7 +54,7 @@ jobs:
     name: Build, package & deploy services
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
-    needs: matrix
+    needs: changes
 
     strategy:
       matrix:
